--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "react-test-renderer": "^16.8.6"
+    "eslint-utils": "^1.4.2",
+    "mixin-deep": "^2.0.1",
+    "react-test-renderer": "^16.8.6",
+    "set-value": "^3.0.1"
   },
   "browserslist": [
     ">0.2%",
